<resources>
    <string name="app_name">iCovidClusterPredictor</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Show Cluster Map </string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome To our APP !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_area">Area</string>
    <string name="title_activity_predict_covid_cluster">PredictCovidCluster</string>
    <string name="title_activity_visulize_covid_cluster">Map</string>
    <string name="share_yes_string">Yes</string>
    <string name="share_no_string">No </string>
    <string name="share_info">share_info</string>
    <string name="share_info_string">Share location info</string>
    <string name="area_code_string">area_code_string</string>
    <string name="suburb_string">Suburb</string>
    <string name="create_profile_string">Create Area Profile</string>
    <string name="city_string">City</string>
    <string name="name_string">Name</string>
    <string name="title_activity_show_areas">Show Areas Covid Info</string>
</resources>