<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="left"
        android:text="@string/name_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lblAreaCode"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="87dp"
        android:ems="10"
        android:gravity="left"
        android:text="Post Code"
        app:layout_constraintBottom_toTopOf="@+id/create_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblShareInfo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblShareInfo"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="left"
        android:text="Share location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSuburb"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lblSuburb"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="left"
        android:text="@string/suburb_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCity" />

    <TextView
        android:id="@+id/lblCity"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="left"
        android:hint="City"
        android:text="@string/city_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />


    <EditText
        android:id="@+id/suburb"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lblSuburb"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <Button
        android:id="@+id/create_profile"
        android:layout_width="259dp"
        android:layout_height="70dp"
        android:layout_gravity="start"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="80dp"
        android:alpha="0.9"
        android:background="?android:attr/colorMultiSelectHighlight"
        android:enabled="true"
        android:text="@string/create_profile_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/city"
        android:layout_width="140dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lblCity"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lblName"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/shreProfileGroup"
        android:layout_width="144dp"
        android:layout_height="104dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lblShareInfo"
        app:layout_constraintTop_toBottomOf="@+id/suburb">

        <RadioButton
            android:id="@+id/share_yes"
            android:layout_width="111dp"
            android:layout_height="40dp"
            android:text="@string/share_yes_string"/>

        <RadioButton
            android:id="@+id/share_no"
            android:layout_width="122dp"
            android:layout_height="44dp"
            android:checked="true"
            android:text="@string/share_no_string"/>
    </RadioGroup>

    <EditText
        android:id="@+id/area_code"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/create_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lblAreaCode"
        app:layout_constraintTop_toBottomOf="@+id/shreProfileGroup"
        app:layout_constraintVertical_bias="0.141" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.050890584" />
</androidx.constraintlayout.widget.ConstraintLayout>